{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Touch",
            "id": "4eb2d670-218a-4fb0-8aa4-9386808b15a6",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "1b9f14e9-6117-4b7a-b4a2-df8a5c16bc78",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d73b2bfa-ba73-4299-8348-d6ee09c604d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0882873e-7291-4ff0-a9ae-a35e39b0ee9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "473aa0fb-015a-4855-89b4-730b77c70e0b",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b5d088e-ca82-4d8d-bb4b-b75a72feb01d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94a9f28c-1811-443b-bdbe-5c0842ca0112",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}